# quake2mod

./: .gitignore  CMakeLists.txt  Makefile  README  g_ai.c  g_items.c  g_local.h  g_monster.c  p_weapon.c  start.sh
mod/: mod.c  mod.h  q2includewrapper.h  sh_bullet.c  sh_bullet.h  weapon.c
src/: g_items.c  g_local.h  g_main.c  p_client.c  p_hud.c  q_shared.c
src/mod/: mod.c  mod.h  sh_bullet.c  sh_bullet.h  weapon.c
